[package]
name = "harmoonic"
version = "1.0.1"
authors = ["EVERMEDIA PROJECT"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "harmoonic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-os = { version = "2.0.0", features = [] }
tauri-plugin-cli = { version = "2.0.0", features = [] }
tauri-plugin-fs = { version = "2.0.0", features = [] }
tauri-plugin-dialog = { version = "2.0.0", features = [] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization
lto = true # Enables link-time-optimizations
opt-level = 3 # `"s"` Prioritizes small binary size. Use `3` if you prefer speed
panic = "abort" # Higher performance by disabling panic handlers
strip = true # Ensures debug symbols are removed
